--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>fr.florian.telegramcannalapi</groupId>
-    <artifactId>TelegramCannalAPI</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>net.telegram.channel</groupId>
+    <artifactId>telegram-channel</artifactId>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+    </dependencies>
 
 </project>
