--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.13</version>
+            <groupId>net.httpclient.wrapper</groupId>
+            <artifactId>httpclient-wrapper</artifactId>
+            <version>1.0</version>
         </dependency>
     </dependencies>
 
